name:                ether
version:             0.1.0.1
synopsis:            Monad transformers and classes
description:
    Ether is a Haskell library that extends @mtl@ and @transformers@ with
    tagged monad transformers and classes in a compatible way.

category:            Control
license:             BSD3
license-file:        LICENSE
author:              Index Int
maintainer:          Index Int <vlad.z.4096@gmail.com>
homepage:            https://int-index.github.io/ether/
bug-reports:         https://github.com/int-index/ether/issues
build-type:          Simple
cabal-version:       >=1.18
extra-source-files:  CHANGELOG.md

source-repository head

  type:                git
  location:            git@github.com:int-index/ether.git


library

  exposed-modules:     Control.Ether.Tagged
                       Control.Ether.Wrapped
                       Control.Ether.TH
                       Control.Monad.Trans.Ether.Reader
                       Control.Monad.Trans.Ether.Writer
                       Control.Monad.Trans.Ether.State
                       Control.Monad.Trans.Ether.State.Lazy
                       Control.Monad.Trans.Ether.State.Strict
                       Control.Monad.Trans.Ether.Except
                       Control.Monad.Ether.Reader
                       Control.Monad.Ether.Reader.Class
                       Control.Monad.Ether.Writer
                       Control.Monad.Ether.Writer.Class
                       Control.Monad.Ether.State
                       Control.Monad.Ether.State.Class
                       Control.Monad.Ether.State.Lazy
                       Control.Monad.Ether.State.Strict
                       Control.Monad.Ether.Except
                       Control.Monad.Ether.Except.Class
                       Control.Monad.Ether.Implicit.Reader
                       Control.Monad.Ether.Implicit.Writer
                       Control.Monad.Ether.Implicit.State
                       Control.Monad.Ether.Implicit.State.Lazy
                       Control.Monad.Ether.Implicit.State.Strict
                       Control.Monad.Ether.Implicit.Except
                       Control.Monad.Ether.Implicit.Except.TH

  other-modules:       Control.Ether.Util

  build-depends:       base >=4.7 && <4.9
               ,       transformers >=0.4.2
               ,       mtl >=2.2.1
               ,       template-haskell >=2.9
               ,       newtype-generics >=0.4.1

  default-language:    Haskell2010
  other-extensions:    DeriveGeneric
                       MultiParamTypeClasses
                       TypeFamilies
                       FlexibleInstances
                       UndecidableInstances
                       DataKinds
                       GeneralizedNewtypeDeriving
                       FunctionalDependencies
                       ConstraintKinds
                       ScopedTypeVariables
                       TemplateHaskell
                       PolyKinds
                       TypeOperators
                       DefaultSignatures
                       CPP

  hs-source-dirs:      src
  ghc-options:         -Wall


test-suite regression

  build-depends:       base >=4.7 && <4.9
               ,       transformers >=0.4.2
               ,       mtl >=2.2.1
               ,       tasty >=0.10
               ,       tasty-quickcheck >=0.8
               ,       QuickCheck >=2.8
               ,       ether

  main-is:             Regression.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
