name:                ether
version:             0.4.0.2
synopsis:            Monad transformers and classes
description:
    Ether is a Haskell library that extends @mtl@ and @transformers@ with
    tagged monad transformers and classes in a compatible way.

    Introduction <https://int-index.github.io/ether/>

category:            Control
license:             BSD3
license-file:        LICENSE
author:              Index Int
maintainer:          Index Int <vlad.z.4096@gmail.com>
homepage:            https://int-index.github.io/ether/
bug-reports:         https://github.com/int-index/ether/issues
build-type:          Simple
cabal-version:       >=1.18
extra-source-files:  CHANGELOG.md

source-repository head

  type:                git
  location:            git@github.com:int-index/ether.git


library

  exposed-modules:     Control.Ether.Abbr
                       Control.Ether.Implicit.Abbr
                       Control.Ether.TH
                       Control.Monad.Trans.Ether.Reader
                       Control.Monad.Trans.Ether.Writer
                       Control.Monad.Trans.Ether.State
                       Control.Monad.Trans.Ether.State.Lazy
                       Control.Monad.Trans.Ether.State.Strict
                       Control.Monad.Trans.Ether.Except
                       Control.Monad.Trans.Ether.Dispatch
                       Control.Monad.Trans.Ether.Tagged
                       Control.Monad.Ether
                       Control.Monad.Ether.Reader
                       Control.Monad.Ether.Reader.Class
                       Control.Monad.Ether.Writer
                       Control.Monad.Ether.Writer.Class
                       Control.Monad.Ether.State
                       Control.Monad.Ether.State.Class
                       Control.Monad.Ether.State.Lazy
                       Control.Monad.Ether.State.Strict
                       Control.Monad.Ether.Except
                       Control.Monad.Ether.Except.Class
                       Control.Monad.Ether.Implicit
                       Control.Monad.Ether.Implicit.Reader
                       Control.Monad.Ether.Implicit.Writer
                       Control.Monad.Ether.Implicit.State
                       Control.Monad.Ether.Implicit.State.Lazy
                       Control.Monad.Ether.Implicit.State.Strict
                       Control.Monad.Ether.Implicit.Except

  other-modules:       Control.Ether.Util

  build-depends:       base >=4.7 && <4.10
               ,       transformers >=0.4.2
               ,       transformers-lift >=0.1.0.1
               ,       mtl >=2.2.1
               ,       mmorph >=1.0.4
               ,       monad-control >=1.0.0.4
               ,       transformers-base >=0.4.4
               ,       exceptions >=0.8
               ,       template-haskell >=2.9

  default-language:    Haskell2010
  other-extensions:    CPP
                       ConstraintKinds
                       DataKinds
                       DefaultSignatures
                       DeriveGeneric
                       FlexibleInstances
                       FunctionalDependencies
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       ScopedTypeVariables
                       TemplateHaskell
                       TypeFamilies
                       TypeOperators
                       UndecidableInstances

  hs-source-dirs:      src
  ghc-options:         -Wall


test-suite regression

  build-depends:       base >=4.7 && <4.10
               ,       transformers >=0.4.2
               ,       mtl >=2.2.1
               ,       tasty >=0.10
               ,       tasty-quickcheck >=0.8
               ,       QuickCheck >=2.8
               ,       ether

  main-is:             Regression.hs
  other-modules:       Regression.T1
                       Regression.T2
                       Regression.T3
                       Regression.T4
                       Regression.T5
                       Regression.T6
                       Regression.T7
                       Regression.T8
                       Regression.T9
                       Regression.T10

  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DataKinds
                       EmptyDataDecls
                       FlexibleContexts
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       PolyKinds
                       ScopedTypeVariables
                       TemplateHaskell
                       TypeFamilies
                       TypeOperators
  ghc-options:         -Wall -fno-warn-missing-signatures
