name:                ether-flatten
version:             0.1.0.0
synopsis:            Flatten nested monad transformers
description:
    Flatten nested monad transformers to gain performance.

category:            Control
license:             BSD3
license-file:        LICENSE
author:              Index Int
maintainer:          Index Int <vlad.z.4096@gmail.com>
homepage:            https://int-index.github.io/ether/
bug-reports:         https://github.com/int-index/ether/issues
build-type:          Simple
cabal-version:       >=1.18
extra-source-files:  CHANGELOG.md

source-repository head

  type:                git
  location:            git@github.com:int-index/ether.git


library

  exposed-modules:     Control.Monad.Ether.Reader.Flatten
  build-depends:       base >=4.9 && <4.10
               ,       ether >=0.5 && <0.6
               ,       transformers >=0.4.2
               ,       transformers-lift >=0.1.0.1
               ,       ghc-prim >=0.3
               ,       lens >=4.14

  default-language:    Haskell2010
  default-extensions:  PolyKinds
                       ScopedTypeVariables
                       FunctionalDependencies
                       TypeApplications

  hs-source-dirs:      src
  ghc-options:         -Wall


benchmark bench

  build-depends:       base >=4.9 && <4.10
               ,       mtl >=2.2.1
               ,       transformers >=0.4.2
               ,       criterion >=1.1
               ,       lens >=4.14
               ,       ether
               ,       ether-flatten

  main-is:             Bench.hs

  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
