name:                ether-suite
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.18

library
  -- Dummy section.
  default-language:    Haskell2010

test-suite regression

  build-depends:       base >=4.9 && <4.10
               ,       transformers >=0.4.2
               ,       mtl >=2.2.1
               ,       tasty >=0.10
               ,       tasty-quickcheck >=0.8
               ,       QuickCheck >=2.8
               ,       ghc-prim >=0.3
               ,       lens >=4.14
               ,       ether
               ,       ether-zoom

  main-is:             Regression.hs
  other-modules:       Regression.T1
                       Regression.T2
                       Regression.T3
                       Regression.T4
                       Regression.T5
                       Regression.T6
                       Regression.T7
                       Regression.T8
                       Regression.T9
                       Regression.T10
                       Regression.T11
                       Regression.T12

  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DataKinds
                       EmptyDataDecls
                       FlexibleContexts
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       PolyKinds
                       ScopedTypeVariables
                       TypeApplications
                       TypeFamilies
                       TypeOperators
  ghc-options:         -Wall -fno-warn-missing-signatures


benchmark bench

  build-depends:       base >=4.9 && <4.10
               ,       mtl >=2.2.1
               ,       transformers >=0.4.2
               ,       criterion >=1.1
               ,       lens >=4.14
               ,       ether
               ,       ether-flatten

  main-is:             Bench.hs

  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  ghc-prof-options:    -fprof-auto
