name:                ether-zoom
version:             0.1.0.0
synopsis:            Zoom for the state monad
description:
    Zoom into parts of a state using a lens.

category:            Control
license:             BSD3
license-file:        LICENSE
author:              Vladislav Zavialov
maintainer:          Vladislav Zavialov <vlad.z.4096@gmail.com>
homepage:            https://int-index.github.io/ether/
bug-reports:         https://github.com/int-index/ether/issues
build-type:          Simple
cabal-version:       >=1.18
extra-source-files:  CHANGELOG.md

source-repository head

  type: git
  location: git@github.com:int-index/ether.git


library

  exposed-modules:
    Control.Monad.Ether.State.Zoom

  build-depends:
    base >=4.9 && <4.11,
    ether >=0.5 && <0.6,
    transformers >=0.5,
    lens >=4.14,
    reflection >=2.1

  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DeriveGeneric
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    PartialTypeSignatures
    PolyKinds
    ScopedTypeVariables
    RankNTypes
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeInType
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    UndecidableSuperClasses

  hs-source-dirs:
    src

  ghc-options:
    -Wall -O2
